components/kubernetes/ingress/coupon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: couponapi
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: demoapp
