components/kubernetes/ingress/coupon-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp
  namespace: couponapi
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
       - path: /
         backend:
          serviceName: demoapp
          servicePort: 80
